--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<h2><a href="trabajos/minimoto2024.html">Bultaco Mercurio 125<br />
 										Restauración completa de este clásico de las motos</a></h2>
 									</header>
-									<a href="trabajos/bultacomercurio.html" class="image fit"><img src="images/bultaco-mercurio/bm1.jpeg" alt="bultaco-mercurio" /></a>
+									<a href="trabajos/bultacomercurio.html" class="image fit"><img src="images/bultaco-mercurio/bm1.JPEG" alt="bultaco-mercurio" /></a>
 									<p>Restauración completa </p>
 									<ul class="actions special">
 										<li><a href="trabajos/bultacomercurio.html" class="button">Ver proceso</a></li>
