--- a/trabajos/bultacomercurio.html
+++ b/trabajos/bultacomercurio.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="../index.html" class="logo">>Home Auto Restorer</a>
+						<a href="../index.html" class="logo">Home Auto Restorer</a>
 					</header>
 
 				<!-- Nav -->
