--- a/trabajos/minimoto2024.html
+++ b/trabajos/minimoto2024.html
@@ -175,6 +175,26 @@
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m104.JPEG" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m105.JPEG" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m106.JPEG" /></a></div>
+								<p> Comienza el proceso de lijado, imprimación y pintura de los plásticos del carenado. La cúpula estaba rota, por lo que la restauro con pasta y la pinto puliendo con un vinilo al final del todo</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m107.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m108.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m109.jpg" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m110.jpg" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m111.jpg" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m112.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m113.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m114.JPG" /></a></div>
+								<p> Comienza el montaje del carenado y demás embellecedores</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m115.jpg" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m116.jpg" /></a></div>
+								<p> Y POR FIN EL RESULTADO FINAL!!!!</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m117.jpg" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m118.jpg" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m119.jpg" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m120.jpg" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m121.jpg" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m122.jpg" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m123.jpg" /></a></div>
 							</section>
 					</div>
 
