--- a/trabajos/minimoto2024.html
+++ b/trabajos/minimoto2024.html
@@ -195,12 +195,12 @@
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m121.jpg" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m122.jpg" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m123.jpg" /></a></div>
-								<iframe width=»315″ height=»560″
-										src=»https://www.youtube.com/embed/jnHeYwPTjdc»
-									title=»Restaurando minimoto homeautorestorer»
-									frameborder=»0″
-									allow=»accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share»
-									allowfullscreen>
+								<iframe width="315" height="560"
+										src="https://www.youtube.com/embed/jnHeYwPTjdc"
+									title="Restaurando minimoto homeautorestorer"
+									frameborder="0"
+									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share
+									allowfullscreen">
 								</iframe>
 							</section>
 					</div>
