upload minimoto at the end

--- a/trabajos/minimoto2024.html
+++ b/trabajos/minimoto2024.html
@@ -195,8 +195,7 @@
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m121.jpg" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m122.jpg" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m123.jpg" /></a></div>
-								<!--<iframe width="315" height="560"-->
-								<iframe width="100%" height="100%"
+								<iframe width="100%" height="600"
 										src="https://www.youtube.com/embed/jnHeYwPTjdc"
 										title="YouTube video player"
 										frameborder="0"
