upload minimoto at the end

--- a/trabajos/minimoto2024.html
+++ b/trabajos/minimoto2024.html
@@ -175,6 +175,12 @@
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m104.JPEG" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m105.JPEG" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m106.JPEG" /></a></div>
+								<iframe width="100%" height="600"
+										src="https://www.youtube.com/embed/WVu2Y1ZTpwo"
+										title="YouTube video player"
+										frameborder="0"
+										allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+										allowfullscreen></iframe>
 								<p> Comienza el proceso de lijado, imprimación y pintura de los plásticos del carenado. La cúpula estaba rota, por lo que la restauro con pasta y la pinto puliendo con un vinilo al final del todo</p>
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m107.JPG" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto2024/m108.JPG" /></a></div>
