add youtube info

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Esto es HomeAutoRestorer</a></li>
 						</ul>
+						<ul class="icons">
+							<li><a href="https://www.youtube.com/@Homeautorestorer" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+						</ul>
 					</nav>
 
 				<!-- Main -->
