add youtube info

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 						<ul class="icons">
 							<li><a href="https://www.youtube.com/@Homeautorestorer" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 						</ul>
+						<ul class="icons">
+							<li><a href="mailto: homeautorestorer@gmail.com" class="icon brands fa-mail-bulk"><span class="label">Email</span></a></li>
+						</ul>
 					</nav>
 
 				<!-- Main -->
