--- a/trabajos/bultacomercurio.html
+++ b/trabajos/bultacomercurio.html
@@ -36,7 +36,7 @@
 							<li><a href="https://www.youtube.com/@Homeautorestorer" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="mailto: homeautorestorer@gmail.com" class="icon brands fa-mail-bulk"><span class="label">Email</span></a></li>
+							<li><a href="mailto: homeautorestorer@gmail.com" class="icon brands fa-mailchimp"><span class="label">Email</span></a></li>
 						</ul>
 					</nav>
 
