add minimoto blata proyecto

--- a/trabajos/minimoto-blata.html
+++ b/trabajos/minimoto-blata.html
@@ -53,6 +53,22 @@
 								</header>
 								<p>Primera foto de la recogida de la minimoto Blata: </p>
 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/01.jpg" /></a></div>
+								<p>El radiador no está funcionando porque la correa de la bomba del agua no la tiene. Además el radiador tiene bastante resto mineral por lo que ha sido usado con agua sin destilar.
+								Esto puede ser un problema mayor porque si los manguitos están tapados, habrá que cambiarlos y también mirar el estado de la bomba de agua e incluso el motor.
+									El carenado está partido en dos, por lo que es un reto ver si podemos unirlo de nuevo y restaurarlo para evitar costes de uno nuevo.
+									Por otro lado, el tirador no funciona y eso hay que repararlo también.
+								</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/02.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/03.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/04.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/05.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/06.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/07.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/08.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/09.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/10.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/11.JPG" /></a></div>
+
 
 							</section>
 					</div>
