add minimoto blata proyecto

--- a/trabajos/minimoto-blata.html
+++ b/trabajos/minimoto-blata.html
@@ -68,7 +68,58 @@
 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/09.JPG" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/10.JPG" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/11.JPG" /></a></div>
-
+								<p> Reparación del carenado: Para reparar el carenado lo primero es intentar unir ambas piezas con la mezcla de cianoacrilato y bicarbonato que tantos buenos resultados me está dando.
+								El proceso consiste en poner cinta de aluminio para que no se pegue la mezcla y luego ir rellenando las grietas con la mezcla de cianoacrilato y bicarbonato. Una vez aplicado lo siguiente es ligar para dejar a nivel.
+								</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/12.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/13.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/14.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/15.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/16.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/17.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/18.JPG" /></a></div>
+								<p> Desmontamos el depósito y lo limpiamos por dentro y por fuera. Por dentro usamos gasolina pura, y por fuera desengrasante y cepillos de cerdas blandas</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/19.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/20.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/21.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/22.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/23.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/24.JPG" /></a></div>
+								<p> Siguiente paso: Horquilla, ruedas, tija, buje, y revisión de pastillas de freno y cables.
+									Había una de las dos pinzas de freno mal ajustada, y se tuvo que reemplazar una de las 2 pastillas. Suerte que tenía una similar con más o menos el mismo desgaste.
+								En cuanto a la horquilla, se desmonta completamente, y se pule el metal, quitando todo el óxido y suciedad. Incluso se pulen los tornillos para quitarles el óxido y devolverles el brillo. Se pule con brillo espejo y se dejan las piezas montadas otra vez.
+								Para la rueda, se desmonta del disco, se lava completamente para quitar esa suciedad incrustada, después limpiamos la llanta y pulimos un poco el metal, aunque con el disco es complicado pero bueno.
+								Creo que el resultado es bastante impresionante, comparando como estaba.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/25.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/26.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/27.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/28.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/29.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/30.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/31.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/32.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/33.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/34.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/35.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/36.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/37.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/38.JPG" /></a></div>
+								<p> Pulimos a espejo los embellecedores que van debajo del deposito. La verdad es que uno de ellos todavía tenía los plásticos de protección original. En la última foto se puede ver el reflejo de mi cara y el móvil después de pulirlo.
+								</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/39.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/40.JPG" /></a></div>
+								<p> Como hemos desmontado el tirador porque está roto, aprovechamos y pulimos el metal para dejarlo limpio y de fábrica ;)
+								</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/41.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/42.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/43.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/44.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/45.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/46.JPG" /></a></div>
+								<p> Aquí es donde, al desmontar el volante magnético, y la rueda de la bomba de agua, veo el problema con la goma. Está rota y por eso no estaba funcionando con refrigeración por agua.
+								</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/47.JPG" /></a></div>
+								<p> Continuará...</p>
 
 							</section>
 					</div>
