--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 									<a href="trabajos/minimoto-blata.html" class="image fit"><img src="images/minimoto-blata/01.jpg" alt="minimoto-blata" /></a>
 									<p>Restauración completa </p>
 									<ul class="actions special">
-										<li><a href="trabajos/minimoto-blata.html.html" class="button">Ver proceso</a></li>
+										<li><a href="trabajos/minimoto-blata.html" class="button">Ver proceso</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">En Proceso</span>
-										<h2><a href="trabajos/minimoto2024.html">Bultaco Mercurio 125<br />
+										<h2><a href="trabajos/bultacomercurio.html">Bultaco Mercurio 125<br />
 										Restauración completa de este clásico de las motos</a></h2>
 									</header>
 									<a href="trabajos/bultacomercurio.html" class="image fit"><img src="images/bultaco-mercurio/bm1.JPEG" alt="bultaco-mercurio" /></a>
