add minimoto blata proyecto

--- a/trabajos/minimoto-blata.html
+++ b/trabajos/minimoto-blata.html
@@ -119,7 +119,43 @@
 								<p> Aquí es donde, al desmontar el volante magnético, y la rueda de la bomba de agua, veo el problema con la goma. Está rota y por eso no estaba funcionando con refrigeración por agua.
 								</p>
 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/47.JPG" /></a></div>
-								<p> Continuará...</p>
+								<p> Después de limpiar y preparar una goma nueva el resultado qeuda así:</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/48.JPG" /></a></div>
+								<p> Vamos a por el radiador, pero según voy necesitando voy quitando piezas y restaurando para ir adelantando trabajo. En este caso me toca el protector de cadena y el del piñon para poder desarmar mejor los tubos del radiador.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/49.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/50.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/51.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/52.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/53.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/54.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/55.JPG" /></a></div>
+								<p> Ahora ya podemos sacar el radiador y ponemos unas fotos para saber como va montado después. El estado es lamentable debido a los restos de cal después de haber usado agua en lugar del rebajado o agua destilada</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/56.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/57.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/58.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/59.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/60.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/61.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/62.JPG" /></a></div>
+								<p> Comenzamos a desengrasar y limpiar por dentro y por fuera el deposito. Pulimos los tornillos de la cal y óxido y dejamos el tapón como nuevo.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/63.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/64.JPG" /></a></div>
+								<p> Empezamos a limpiar los tubos y revisar si fugan o tienen algún problema. El purgador tiene la goma partida (por eso quizás tenía perdidas y hay tanta cal). Le ponemos una goma nueva.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/65.JPG" /></a></div>
+								<p> Ahora toca el radiador, lo limpiamos primero con agua a presión y después debajo de la manguera para limpiar todo el interior. Una vez deja de salir mierda, hago un último lavado con el líquido para limpiar radiadores del coche. Así no dejará restos de cal</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/66.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/67.JPG" /></a></div>
+								<p> Limpiamos todo el exterior del radiador, y solo nos queda dejarlo secar para poder peinarlo posteriormente.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/68.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/69.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/70.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/71.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/72.JPG" /></a></div>
+								<p> continuará...</p>
+
+
+
+
 
 							</section>
 					</div>
