add minimoto blata proyecto

--- a/trabajos/minimoto-blata.html
+++ b/trabajos/minimoto-blata.html
@@ -151,7 +151,73 @@
 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/70.JPG" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/71.JPG" /></a></div>
 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/72.JPG" /></a></div>
-								<p> continuará...</p>
+								<p> Después de cepillar el resultado es espectacular como si hubieramos comprado uno nuevo pero sin gastar un duro ;) </p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/73.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/74.JPG" /></a></div>
+								<p> Vamos a quitar la rueda trasera y a empezar a desmontar la parte trasera para llegar hasta el carburador. La verdad es que está todo lleno de grasa y suciedad: </p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/75.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/76.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/77.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/78.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/79.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/80.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/81.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/82.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/83.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/84.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/85.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/86.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/87.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/88.JPG" /></a></div>
+								<p> Después de revisar los frenos, y de limpiar todo el ferodo, nos ponemos con la rueda que parece nueva. Lamentablemente, al terminar, veo que la válvula de la rueda no funciona, así que tendremos que cambiarla, pero por lo menos tenemos todo limpio, incluido la corona desmontada:</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/89.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/90.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/91.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/92.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/93.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/94.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/95.JPG" /></a></div>
+								<p> Una vez liberado, ya vemos todo para ir limpiando y seguir desmontando cosas como el filtro hasta llegar al carburador que es lo que más me preocupa. Si esta moto ha estado rodando sin agua, y encima el filtro está super sucio, podemos encontrar de todo dentro de la cuba: </p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/96.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/97.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/98.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/99.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/100.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/101.JPG" /></a></div>
+								<p> La verdad es que después de desengrasar todo bien, parece una moto nueva: </p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/102.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/103.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/104.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/105.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/106.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/107.JPG" /></a></div>
+								<p> Aunque el cliente me comenta de no hacer el escape, voy a darle un lavado de cara al silenciador que es lo único que se verá desde fuera. Después de pulir el resultado es espectacular</p>
+ 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/108.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/109.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/110.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/111.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/112.JPG" /></a></div>
+								<p> Llegamos al carburador, y lo único que me encuentro después de limpiarlo bien es que la goma no hace vacío en la cuba y por eso fugaba gasolina. La verdad es que he tardado un tiempo en verlo pero después de probar con un embudo se ha quedado perfecto. Aún así pondremos un grifo en el depósito para que el cliente pueda cortar cuando quiera.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/113.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/114.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/115.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/116.JPG" /></a></div>
+								<p> Primer arrancón sin agua, y con un embudo simplemente para probar que funciona. Pero vayaaaaaa si no tiene interruptor de parada.... Tendremos que pedir uno y ponerlo para hacer la vida más fácil.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/117.JPG" /></a></div>
+								<p> Vaya, después de haber arreglado el tirador, con la primera arrancada, otra vez bloqueado. Lo desmonto y veo que lo que ocurre ahora es que la rueda del tirador interna tiene un agujero rojo y la cuerda se sale. Me pongo a repararlo con mi truco mágico para plásticos. Queda como nuevo.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/118.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/119.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/120.JPG" /></a></div>
+								<p> Aprovechamos y ya que estamos le ponemos un tubo más largo al depósito. Otro problema que veía de tanta gasolina era que no hacía vacío porque el deposito no tenía salida bien hecha. Ahora por ahí no soltará ni una gota de gasolina.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/121.JPG" /></a></div>
+								<p> Ahora en lugar de dejar los cables con bridas o cinta aislante como venía, hacemos un trabajo curioso escondiendo entre los tornillos los cables con bridas. Desde fuera no se verá nada... Además de buen trabajo hay que ser curiosos en esta vida.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/122.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/123.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/123.JPG" /></a></div>
+								<p> Mientras nos llegan piezas, vamos a ir lijando el carenado: </p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/124.JPG" /></a></div>
+
+
 
 
 
