add minimoto blata proyecto

--- a/index.html
+++ b/index.html
@@ -53,19 +53,15 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
-								<header class="major">
-									<span class="date">Últimas Restauraciones</span>
-									<h2><a href="trabajos/minimoto2024.html">Minimoto 2024</a></h2>
-									<p>
-									Esta restauración consiste en un proceso completo de restauración, desde soldado de chasis roto, motor, pistón, regulación carburador
-									, reparación de frenos, pintura, óxidos, etc.</p>
-									<p>
-										Se compró chatarra, chasis roto, motor sin giro ni compresión, y se restauró completamente para su uso, devolviéndole una segunda vida.
-									</p>
+								<header>
+									<span class="date">En Proceso</span>
+									<h2><a href="trabajos/minimoto-blata.html">Minimoto Blata 2025<br />
+										Restauración de esta bestia que necesita una segunda vida</a></h2>
 								</header>
-								<a href="trabajos/minimoto2024.html" class="image main"><img src="images/minimoto2024/m123.jpg" alt="minimoto2024" /></a>
+								<a href="trabajos/minimoto-blata.html" class="image fit"><img src="images/minimoto-blata/01.jpg" alt="minimoto-blata" /></a>
+								<p>Restauración completa </p>
 								<ul class="actions special">
-									<li><a href="trabajos/minimoto2024.html" class="button large">Ver proceso</a></li>
+									<li><a href="trabajos/minimoto-blata.html" class="button">Ver proceso</a></li>
 								</ul>
 							</article>
 
@@ -74,6 +70,34 @@
 								<article>
 									<header>
 										<span class="date">En Proceso</span>
+										<h2><a href="trabajos/bultacomercurio.html">Bultaco Mercurio 125<br />
+											Restauración completa de este clásico de las motos</a></h2>
+									</header>
+									<a href="trabajos/bultacomercurio.html" class="image fit"><img src="images/bultaco-mercurio/bm1.JPEG" alt="bultaco-mercurio" /></a>
+									<p>Restauración completa </p>
+									<ul class="actions special">
+										<li><a href="trabajos/bultacomercurio.html" class="button">Ver proceso</a></li>
+									</ul>
+								</article>
+								<article>
+									<header class="major">
+										<span class="date">2024</span>
+										<h2><a href="trabajos/minimoto2024.html">Minimoto 2024</a></h2>
+										<p>
+											Esta restauración consiste en un proceso completo de restauración, desde soldado de chasis roto, motor, pistón, regulación carburador
+											, reparación de frenos, pintura, óxidos, etc.</p>
+										<p>
+											Se compró chatarra, chasis roto, motor sin giro ni compresión, y se restauró completamente para su uso, devolviéndole una segunda vida.
+										</p>
+									</header>
+									<a href="trabajos/minimoto2024.html" class="image main"><img src="images/minimoto2024/m123.jpg" alt="minimoto2024" /></a>
+									<ul class="actions special">
+										<li><a href="trabajos/minimoto2024.html" class="button large">Ver proceso</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">Mayo 2025</span>
 										<h2><a href="trabajos/minimoto-blata.html">Minimoto Blata 2025<br />
 											Restauración de esta bestia que necesita una segunda vida</a></h2>
 									</header>
@@ -83,18 +107,7 @@
 										<li><a href="trabajos/minimoto-blata.html" class="button">Ver proceso</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<span class="date">En Proceso</span>
-										<h2><a href="trabajos/bultacomercurio.html">Bultaco Mercurio 125<br />
-										Restauración completa de este clásico de las motos</a></h2>
-									</header>
-									<a href="trabajos/bultacomercurio.html" class="image fit"><img src="images/bultaco-mercurio/bm1.JPEG" alt="bultaco-mercurio" /></a>
-									<p>Restauración completa </p>
-									<ul class="actions special">
-										<li><a href="trabajos/bultacomercurio.html" class="button">Ver proceso</a></li>
-									</ul>
-								</article>
+
 								<!--
 									<article>
                                         <header>
