--- a/trabajos/minimoto-blata.html
+++ b/trabajos/minimoto-blata.html
@@ -216,6 +216,31 @@
 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/123.JPG" /></a></div>
 								<p> Mientras nos llegan piezas, vamos a ir lijando el carenado: </p>
 								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/124.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/125.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/126.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/127.JPG" /></a></div>
+								<p> Colocamos las últimas piezas como el filtro, manguitos y el grifo de la gasolina. Como no me gusta dejar nada al aire, decido atornillarlo al chasis para que sea más fácil para el que la vaya a usar. Le ponemos un interruptor de parada y unas almohadillas para intentar evitar que los plásticos puedan volver a romperse.</p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/128.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/129.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/130.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/131.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/132.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/133.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/134.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/135.JPG" /></a></div>
+								<p> Y después de mucho trabajo el resultado es espectacularrrrrr de nuevo!!! </p>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/136.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/137.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/138.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/139.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/140.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/141.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/142.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/143.JPG" /></a></div>
+								<div class="image main"><a class="image main"><img src="../images/minimoto-blata/144.JPG" /></a></div>
+								<p> Muchas gracias Daniel, por darme la oportunidad de trabajar en esta máquina. </p>
+
+
 
 
 
