add minimoto blata proyecto

--- a/index.html
+++ b/index.html
@@ -83,12 +83,7 @@
 									<header class="major">
 										<span class="date">2024</span>
 										<h2><a href="trabajos/minimoto2024.html">Minimoto 2024</a></h2>
-										<p>
-											Esta restauración consiste en un proceso completo de restauración, desde soldado de chasis roto, motor, pistón, regulación carburador
-											, reparación de frenos, pintura, óxidos, etc.</p>
-										<p>
-											Se compró chatarra, chasis roto, motor sin giro ni compresión, y se restauró completamente para su uso, devolviéndole una segunda vida.
-										</p>
+										Se compró chatarra y ahora parece algo totalmente nuevo
 									</header>
 									<a href="trabajos/minimoto2024.html" class="image main"><img src="images/minimoto2024/m123.jpg" alt="minimoto2024" /></a>
 									<ul class="actions special">
