--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">En Proceso</span>
+									<span class="date">Últimos trabajos</span>
 									<h2><a href="trabajos/minimoto-blata.html">Minimoto Blata 2025<br />
 										Restauración de esta bestia que necesita una segunda vida</a></h2>
 								</header>
-								<a href="trabajos/minimoto-blata.html" class="image fit"><img src="images/minimoto-blata/befunky-blata.jpg" alt="minimoto-blata" /></a>
-								<p>Restauración completa </p>
+								<a href="trabajos/minimoto-blata.html" class="image main"><img src="images/minimoto-blata/befunky-blata.jpg" alt="minimoto-blata" /></a>
 								<ul class="actions special">
-									<li><a href="trabajos/minimoto-blata.html" class="button">Ver proceso</a></li>
+									<li><a href="trabajos/minimoto-blata.html" class="button large">Ver proceso</a></li>
 								</ul>
 							</article>
 
@@ -69,35 +68,32 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">En Proceso</span>
+										<span class="date">En proceso</span>
 										<h2><a href="trabajos/bultacomercurio.html">Bultaco Mercurio 125<br />
 											Restauración completa de este clásico de las motos</a></h2>
 									</header>
 									<a href="trabajos/bultacomercurio.html" class="image fit"><img src="images/bultaco-mercurio/bm1.JPEG" alt="bultaco-mercurio" /></a>
-									<p>Restauración completa </p>
 									<ul class="actions special">
 										<li><a href="trabajos/bultacomercurio.html" class="button">Ver proceso</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">2024</span>
+										<span class="date">Finalizada Dicembre 2024</span>
 										<h2><a href="trabajos/minimoto2024.html">Minimoto 2024</a></h2>
-										Se compró chatarra y ahora parece algo totalmente nuevo
 									</header>
-									<a href="trabajos/minimoto2024.html" class="image main"><img src="images/minimoto2024/m123.jpg" alt="minimoto2024" /></a>
+									<a href="trabajos/minimoto2024.html" class="image fit"><img src="images/minimoto2024/m123.jpg" alt="minimoto2024" /></a>
 									<ul class="actions special">
-										<li><a href="trabajos/minimoto2024.html" class="button large">Ver proceso</a></li>
+										<li><a href="trabajos/minimoto2024.html" class="button">Ver proceso</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">Mayo 2025</span>
+										<span class="date">Finalizada Mayo 2025</span>
 										<h2><a href="trabajos/minimoto-blata.html">Minimoto Blata 2025<br />
 											Restauración de esta bestia que necesita una segunda vida</a></h2>
 									</header>
-									<a href="trabajos/minimoto-blata.html" class="image fit"><img src="images/minimoto-blata/01.jpg" alt="minimoto-blata" /></a>
-									<p>Restauración completa </p>
+									<a href="trabajos/minimoto-blata.html" class="image fit"><img src="images/minimoto-blata/befunky-blata.jpg" alt="minimoto-blata" /></a>
 									<ul class="actions special">
 										<li><a href="trabajos/minimoto-blata.html" class="button">Ver proceso</a></li>
 									</ul>
