--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<h2><a href="trabajos/bultacomercurio.html">Bultaco Mercurio 125<br />
 											Restauración completa de este clásico de las motos</a></h2>
 									</header>
-									<a href="trabajos/bultacomercurio.html" class="image fit"><img src="images/bultaco-mercurio/bm1.JPEG" alt="bultaco-mercurio" /></a>
+									<a href="trabajos/bultacomercurio.html" class="image fit"><img src="images/bultaco-mercurio/befunky-bultaco.jpg" alt="bultaco-mercurio" /></a>
 									<ul class="actions special">
 										<li><a href="trabajos/bultacomercurio.html" class="button">Ver proceso</a></li>
 									</ul>
@@ -82,7 +82,7 @@
 										<span class="date">Finalizada Dicembre 2024</span>
 										<h2><a href="trabajos/minimoto2024.html">Minimoto 2024</a></h2>
 									</header>
-									<a href="trabajos/minimoto2024.html" class="image fit"><img src="images/minimoto2024/m123.jpg" alt="minimoto2024" /></a>
+									<a href="trabajos/minimoto2024.html" class="image fit"><img src="images/minimoto2024/befunky-minimoto.jpg" alt="minimoto2024" /></a>
 									<ul class="actions special">
 										<li><a href="trabajos/minimoto2024.html" class="button">Ver proceso</a></li>
 									</ul>
